DataFrames of shots per team in 2022
Under the Visualisation Avancée section, added a way of filtering the DataFrames so that we have 32 DataFrame containing the shots made by each teams in 2022 (one DataFrame per team)

--- a/NHL_DataExploration.ipynb
+++ b/NHL_DataExploration.ipynb
@@ -511,6 +511,262 @@
    "source": [
     "## 5. Visualisation avancée"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "edd0c0e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data imported: 1312\n",
+      "Data imported: 88\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Récupérer tous les données de 2022\n",
+    "data_2022 = get_data_from(2022,2022)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ef0a2c9c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sharks' 'Predators' 'Lightning' 'Rangers' 'Golden Knights' 'Kings'\n",
+      " 'Capitals' 'Bruins' 'Hurricanes' 'Blue Jackets' 'Maple Leafs' 'Canadiens'\n",
+      " 'Avalanche' 'Blackhawks' 'Ducks' 'Kraken' 'Canucks' 'Oilers' 'Penguins'\n",
+      " 'Coyotes' 'Flyers' 'Devils' 'Senators' 'Sabres' 'Panthers' 'Islanders'\n",
+      " 'Stars' 'Wild' 'Flames' 'Red Wings' 'Jets' 'Blues']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Récupérer le nom de chaque équipe de l'année 2022\n",
+    "teams = pd.concat([df['eventOwnerTeam'] for df in data_2022[2022]])\n",
+    "unique_teams = teams.unique()\n",
+    "print(unique_teams)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da55e81d",
+   "metadata": {},
+   "source": [
+    "#### Here I need to create a dictionary with a DataFrame for each team. Those DataFrames will contain all the shots made by each teams for the season 2022, including playoffs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a040f5c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionary that will have one DataFrame per team, where the team's name is the key\n",
+    "team_shots_dfs = {}\n",
+    "dfs_list = data_2022[2022] # Simplify\n",
+    "\n",
+    "# Loop over each team and filter rows accordingly\n",
+    "for team in unique_teams:\n",
+    "    \n",
+    "    # Creates a DataFrame with only the shots made by a specific team\n",
+    "    team_df = pd.concat([df[df['eventOwnerTeam'] == team] for df in dfs_list])\n",
+    "    \n",
+    "    # Add the new DataFrame to the team_shots_dfs dictionary\n",
+    "    team_shots_dfs[team] = team_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "8781b6a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idGame</th>\n",
+       "      <th>periodType</th>\n",
+       "      <th>currentPeriod</th>\n",
+       "      <th>timeInPeriod</th>\n",
+       "      <th>situationCode</th>\n",
+       "      <th>eventOwnerTeam</th>\n",
+       "      <th>typeDescKey</th>\n",
+       "      <th>iceCoord</th>\n",
+       "      <th>shootingPlayer</th>\n",
+       "      <th>goaliePlayer</th>\n",
+       "      <th>shotType</th>\n",
+       "      <th>teamSide</th>\n",
+       "      <th>emptyGoalNet</th>\n",
+       "      <th>isGoalAdvantage</th>\n",
+       "      <th>shotDistance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022020001</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2022-10-07 18:00:23+00:00</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>Sharks</td>\n",
+       "      <td>shot-on-goal</td>\n",
+       "      <td>(44, 8)</td>\n",
+       "      <td>Timo Meier</td>\n",
+       "      <td>Juuse Saros</td>\n",
+       "      <td>wrist</td>\n",
+       "      <td>away</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>45.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022020001</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2022-10-07 18:02:42+00:00</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>Sharks</td>\n",
+       "      <td>shot-on-goal</td>\n",
+       "      <td>(72, 2)</td>\n",
+       "      <td>Steven Lorentz</td>\n",
+       "      <td>Juuse Saros</td>\n",
+       "      <td>tip-in</td>\n",
+       "      <td>away</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>17.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2022020001</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2022-10-07 18:04:19+00:00</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>Sharks</td>\n",
+       "      <td>shot-on-goal</td>\n",
+       "      <td>(49, 12)</td>\n",
+       "      <td>Oskar Lindblom</td>\n",
+       "      <td>Juuse Saros</td>\n",
+       "      <td>wrist</td>\n",
+       "      <td>away</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>41.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2022020001</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2022-10-07 18:04:44+00:00</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>Sharks</td>\n",
+       "      <td>shot-on-goal</td>\n",
+       "      <td>(46, 18)</td>\n",
+       "      <td>Kevin Labanc</td>\n",
+       "      <td>Juuse Saros</td>\n",
+       "      <td>slap</td>\n",
+       "      <td>away</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>46.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2022020001</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2022-10-07 18:08:08+00:00</td>\n",
+       "      <td>1541</td>\n",
+       "      <td>Sharks</td>\n",
+       "      <td>shot-on-goal</td>\n",
+       "      <td>(60, 17)</td>\n",
+       "      <td>Kevin Labanc</td>\n",
+       "      <td>Juuse Saros</td>\n",
+       "      <td>wrist</td>\n",
+       "      <td>away</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Advantage</td>\n",
+       "      <td>33.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        idGame periodType currentPeriod              timeInPeriod  \\\n",
+       "0   2022020001        REG           1/3 2022-10-07 18:00:23+00:00   \n",
+       "4   2022020001        REG           1/3 2022-10-07 18:02:42+00:00   \n",
+       "6   2022020001        REG           1/3 2022-10-07 18:04:19+00:00   \n",
+       "7   2022020001        REG           1/3 2022-10-07 18:04:44+00:00   \n",
+       "10  2022020001        REG           1/3 2022-10-07 18:08:08+00:00   \n",
+       "\n",
+       "   situationCode eventOwnerTeam   typeDescKey  iceCoord  shootingPlayer  \\\n",
+       "0           1551         Sharks  shot-on-goal   (44, 8)      Timo Meier   \n",
+       "4           1551         Sharks  shot-on-goal   (72, 2)  Steven Lorentz   \n",
+       "6           1551         Sharks  shot-on-goal  (49, 12)  Oskar Lindblom   \n",
+       "7           1551         Sharks  shot-on-goal  (46, 18)    Kevin Labanc   \n",
+       "10          1541         Sharks  shot-on-goal  (60, 17)    Kevin Labanc   \n",
+       "\n",
+       "   goaliePlayer shotType teamSide  emptyGoalNet isGoalAdvantage  shotDistance  \n",
+       "0   Juuse Saros    wrist     away         False         Neutral          45.7  \n",
+       "4   Juuse Saros   tip-in     away         False         Neutral          17.1  \n",
+       "6   Juuse Saros    wrist     away         False         Neutral          41.8  \n",
+       "7   Juuse Saros     slap     away         False         Neutral          46.6  \n",
+       "10  Juuse Saros    wrist     away         False       Advantage          33.6  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example of teams shots by the San Jose Sharks\n",
+    "team_shots_dfs['Sharks'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaf43cba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
