Ajout de homeTeamDefendingSide

--- a/NHL_DataExploration.ipynb
+++ b/NHL_DataExploration.ipynb
@@ -261,7 +261,7 @@
     "    df_teams = extract_teams(game_nhl)\n",
     "\n",
     "    # Create a new dataframe for the event data\n",
-    "    clean_df = pd.DataFrame(df_pbp[['periodDescriptor', 'timeInPeriod', 'situationCode', 'typeDescKey', 'details']])\n",
+    "    clean_df = pd.DataFrame(df_pbp[['periodDescriptor', 'timeInPeriod', 'situationCode',\"homeTeamDefendingSide\",'typeDescKey', 'details']])\n",
     "\n",
     "    #PERIOD DESCRIPTOR\n",
     "    # Create a dataframe to decompose the period descriptor fields\n",
