Affichage zone offensive et tirs

--- a/NHL_DataExploration.ipynb
+++ b/NHL_DataExploration.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "8d67a944574fc258",
    "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "import cv2\n",
     "\n",
     "import SeasonData as sdata"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -24,8 +25,11 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "60f0544b72a4f21c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def angle_between_vectors(v1: np.array, v2: np.array) -> float:\n",
     "    \"\"\"\n",
@@ -54,15 +58,14 @@
     "    # Convert the angle to degrees\n",
     "    angle_degrees = np.degrees(angle_radians)\n",
     "    return angle_degrees"
-   ],
-   "id": "60f0544b72a4f21c",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "da17e105fd5b384",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def additional_features(clean_df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Add additional features to the dataframe\"\"\"\n",
@@ -83,14 +86,14 @@
     "        else angle_between_vectors(x['iceCoord'], np.array([89, 0])), axis=1)\n",
     "\n",
     "    return clean_df"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "ac85106b1a1dc21e",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def minutes_to_seconds(df: pd.DataFrame, column: str) -> pd.Series:\n",
     "    \"\"\"\n",
@@ -108,14 +111,14 @@
     "    df.drop(['minutes', 'seconds', 'numberPeriod'], axis=1, inplace=True)\n",
     "\n",
     "    return df[column]"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "3511273f4153e81b",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def extract_players(game_nhl: dict) -> pd.DataFrame:\n",
     "    \"\"\"Extract the play-by-play data from the game dictionary\"\"\"\n",
@@ -127,14 +130,14 @@
     "    df_players['firstName'] = df_players['firstName'].apply(lambda x: x['default'])\n",
     "    df_players['lastName'] = df_players['lastName'].apply(lambda x: x['default'])\n",
     "    return df_players"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "5ea05fc84089b73b",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def extract_teams(game_nhl: dict) -> pd.DataFrame:\n",
     "    \"\"\"Extract 'home' and 'away' teams\"\"\"\n",
@@ -143,14 +146,14 @@
     "    away_team = {'teamId': game_nhl['awayTeam']['id'], 'teamName': game_nhl['awayTeam']['name']['default'],\n",
     "                 'teamSide': 'away'}\n",
     "    return pd.DataFrame([home_team, away_team])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "6b97b9e57bceda45",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def process_period_data(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Decompose periodDescriptor and return processed dataframe.\"\"\"\n",
@@ -165,14 +168,14 @@
     "    df_period['currentPeriod'] = df_period['number'] + '/' + df_period['maxRegulationPeriods']\n",
     "\n",
     "    return df_period"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "b8c7efdad07d567c",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def process_event_details(df: pd.DataFrame, df_players: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Process event details and merge with player information.\"\"\"\n",
@@ -208,27 +211,27 @@
     "    df_details.drop(['firstName', 'lastName'], axis=1, inplace=True)\n",
     "\n",
     "    return df_details"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "d37d1bb74d29c347",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def calculate_empty_goal_net(df: pd.DataFrame) -> pd.Series:\n",
     "    \"\"\"Determine if the goal net is empty\"\"\"\n",
     "    return df.apply(lambda x: x['situationCode'][3] if x['teamSide'] == 'away' else x['situationCode'][0], axis=1).map(\n",
     "        {'0': True, '1': False})"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "acc2e5e0b0a79885",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def determine_goal_advantage(df: pd.DataFrame) -> pd.Series:\n",
     "    \"\"\"Determine if the event team is in advantage, disadvantage, or neutral situation\"\"\"\n",
@@ -238,14 +241,14 @@
     "    else \"Disadvantage\" if (int(x['situationCode'][1]) < int(x['situationCode'][2]) and x['teamSide'] == 'away') or\n",
     "                           (int(x['situationCode'][2]) < int(x['situationCode'][1]) and x['teamSide'] == 'home')\n",
     "    else 'Neutral', axis=1)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "e8fa9653b8976de2",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def convert_event_to_dataframe(game_nhl: dict) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -311,14 +314,14 @@
     "    clean_df = additional_features(clean_df)\n",
     "\n",
     "    return clean_df"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "77e51ab2",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def get_data_from(first_year: int, last_year: int) -> dict:\n",
     "    \n",
@@ -353,9 +356,7 @@
     "        all_games_dictionary[year] = [convert_event_to_dataframe(game) for game in yearly_data]\n",
     "    \n",
     "    return all_games_dictionary"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -367,15 +368,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "42b484a0",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# This gets all the cleaned data from 2022 to 2023 (inclusive) in a dictionary (key: year)\n",
     "data_2017_2023 = get_data_from(2022,2023)\n",
     "data_2017_2023[2022][123].head() # Année 2022, 124eme partie, 5 premières ligne"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -387,29 +388,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "edd0c0e2",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Récupérer tous les données de 2022\n",
     "data_2022 = get_data_from(2022,2022)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "ef0a2c9c",
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
    "source": [
     "# Récupérer le nom de chaque équipe de l'année 2022\n",
     "teams = pd.concat([df['eventOwnerTeam'] for df in data_2022[2022]])\n",
     "unique_teams = teams.unique()\n",
     "print(unique_teams)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -421,8 +422,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "a040f5c3",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Dictionary that will have one DataFrame per team, where the team's name is the key\n",
     "team_shots_dfs = {}\n",
@@ -436,76 +439,83 @@
     "    \n",
     "    # Add the new DataFrame to the team_shots_dfs dictionary\n",
     "    team_shots_dfs[team] = team_df"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "8781b6a3",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Example of teams shots by the Ottawa Senators\n",
+    "team_shots_dfs['Senators']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2925027b",
    "metadata": {},
    "source": [
-    "# Example of teams shots by the San Jose Sharks\n",
-    "team_shots_dfs['Sharks'].head()"
-   ],
-   "outputs": [],
-   "execution_count": null
+    "1. Afficher les tirs dans la zone offensive pour les Sénateurs d'Ottawa, saison 2022"
+   ]
   },
   {
    "cell_type": "code",
-   "id": "eaf43cba",
+   "execution_count": null,
+   "id": "54e236db",
    "metadata": {},
-   "source": [
-    "# Create a new column for goal (1) and non-goal (0)\n",
-    "df = team_shots_dfs['Bruins'].copy()\n",
-    "df['isGoal'] = np.where(df['typeDescKey'] == 'shot-on-goal', 0, 1)\n",
-    "\n",
-    "# Set up the figure\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "\n",
-    "# Plot KDEs for goals and non-goals\n",
-    "sns.kdeplot(df[df['isGoal'] == 1]['shotDistance'], label='Goal', fill=True)\n",
-    "sns.kdeplot(df[df['isGoal'] == 0]['shotDistance'], label='No Goal', fill=True)\n",
-    "\n",
-    "# Label the plot\n",
-    "plt.title('Density Distribution of Shot Distances for the Boston Bruins')\n",
-    "plt.xlabel('Shot Distance')\n",
-    "plt.ylabel('Density')\n",
-    "plt.legend()\n",
-    "\n",
-    "# Show plot\n",
-    "plt.show()"
-   ],
    "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "e8d0b8e1",
-   "metadata": {},
    "source": [
-    "# Create a new column for goal (1) and non-goal (0)\n",
-    "df = team_shots_dfs['Canadiens'].copy()\n",
-    "df['isGoal'] = np.where(df['typeDescKey'] == 'shot-on-goal', 0, 1)\n",
+    "# Load the offensive zone\n",
+    "zone_img = cv2.imread('zone_offensive.png')\n",
     "\n",
-    "# Set up the figure\n",
-    "plt.figure(figsize=(10, 6))\n",
+    "# Testing on a specific DataFrame\n",
+    "df = team_shots_dfs['Senators'].copy()\n",
     "\n",
-    "# Plot KDEs for goals and non-goals\n",
-    "sns.kdeplot(df[df['isGoal'] == 1]['shotDistance'], label='Goal', fill=True)\n",
-    "sns.kdeplot(df[df['isGoal'] == 0]['shotDistance'], label='No Goal', fill=True)\n",
+    "coords_list = []  # List to store the updated coordinates as tuples\n",
     "\n",
-    "# Label the plot\n",
-    "plt.title('Density Distribution of Shot Distances for the Montreal Canadiens')\n",
-    "plt.xlabel('Shot Distance')\n",
-    "plt.ylabel('Density')\n",
-    "plt.legend()\n",
+    "# Modify the coordinates to fit the offensive zone\n",
+    "for index, row in df.iterrows():\n",
+    "    coords = row['iceCoord']  # Get the tuple from the DataFrame\n",
+    "    \n",
+    "    if row['teamSide'] == 'home':\n",
+    "        # Rotate -90 degrees if home team is defending left side, else rotate 90 degrees        \n",
+    "        new_coords = (-coords[1], coords[0]) if row['homeTeamDefendingSide'] == 'left' else (coords[1], -coords[0])\n",
+    "    else:\n",
+    "        # Rotate 90 degrees if home team is defending left side, else rotate -90 degrees        \n",
+    "        new_coords = (coords[1], -coords[0]) if row['homeTeamDefendingSide'] == 'left' else (-coords[1], coords[0])\n",
+    "    \n",
+    "    # Append the new coordinates to the coords_list\n",
+    "    coords_list.append(new_coords)\n",
     "\n",
-    "# Show plot\n",
+    "# Extract the new coordinates\n",
+    "x_coords = [coord[0] for coord in coords_list]\n",
+    "y_coords = [coord[1] for coord in coords_list]\n",
+    "\n",
+    "# Create a plot\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Display the offensive zone image\n",
+    "extent = [-42.5, 42.5, 0, 100]\n",
+    "ax.imshow(zone_img, extent=extent)\n",
+    "\n",
+    "# Set axis limits\n",
+    "ax.set_xlim(-42.5, 42.5)\n",
+    "ax.set_ylim(0,100)\n",
+    "\n",
+    "# Plot the filtered shots\n",
+    "ax.scatter(x_coords, y_coords, color='orange', s=5, label='Shots')\n",
+    "\n",
+    "# Add labels and title (optional)\n",
+    "ax.set_title('Ottawa Senators Shots in Offensive Zone')\n",
+    "ax.legend()\n",
+    "\n",
+    "# Show the plot\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
