--- a/NHL_DataExploration.ipynb
+++ b/NHL_DataExploration.ipynb
@@ -1164,10 +1164,8 @@
    "cell_type": "code",
    "id": "7bc47ba08e01190",
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2024-10-10T18:21:41.261656Z",
      "start_time": "2024-10-10T18:20:47.959301Z"
     }
    },
@@ -1182,9 +1180,22 @@
       "Data imported: 1271\n",
       "Data imported: 87\n"
      ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[22], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m data_2018_2020 \u001B[38;5;241m=\u001B[39m get_data_from(\u001B[38;5;241m2018\u001B[39m,\u001B[38;5;241m2020\u001B[39m)\n",
+      "Cell \u001B[1;32mIn[12], line 26\u001B[0m, in \u001B[0;36mget_data_from\u001B[1;34m(first_year, last_year)\u001B[0m\n\u001B[0;32m     22\u001B[0m \u001B[38;5;66;03m# Loop over all years\u001B[39;00m\n\u001B[0;32m     23\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m year \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(first_year, last_year\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m):\n\u001B[0;32m     24\u001B[0m     \n\u001B[0;32m     25\u001B[0m     \u001B[38;5;66;03m# Generate the data from API or local if available\u001B[39;00m\n\u001B[1;32m---> 26\u001B[0m     data\u001B[38;5;241m.\u001B[39mfetch_regular_season(year\u001B[38;5;241m=\u001B[39myear)\n\u001B[0;32m     27\u001B[0m     data\u001B[38;5;241m.\u001B[39mfetch_playoffs(year\u001B[38;5;241m=\u001B[39myear)\n\u001B[0;32m     28\u001B[0m     yearly_data \u001B[38;5;241m=\u001B[39m data\u001B[38;5;241m.\u001B[39mregular_season[year] \u001B[38;5;241m+\u001B[39m data\u001B[38;5;241m.\u001B[39mplayoffs[year] \u001B[38;5;66;03m# List with all the games in a year\u001B[39;00m\n",
+      "File \u001B[1;32m~\\OneDrive - Universite de Montreal\\Documents\\1-UNIVERSITE DE MONTREAL\\1-COURS\\2- Automne 2024\\IFT6758 - Data Science\\1- IFT 6758 A\\4- Projet\\DS_Project\\SeasonData.py:72\u001B[0m, in \u001B[0;36mNHLData.fetch_regular_season\u001B[1;34m(self, year)\u001B[0m\n\u001B[0;32m     69\u001B[0m         \u001B[38;5;28;01mbreak\u001B[39;00m\n\u001B[0;32m     70\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m     71\u001B[0m     \u001B[38;5;66;03m# Load the game data from the local file\u001B[39;00m\n\u001B[1;32m---> 72\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(local_file, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mr\u001B[39m\u001B[38;5;124m'\u001B[39m, encoding\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mutf-8\u001B[39m\u001B[38;5;124m'\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m file:\n\u001B[0;32m     73\u001B[0m         data \u001B[38;5;241m=\u001B[39m json\u001B[38;5;241m.\u001B[39mload(file)\n\u001B[0;32m     75\u001B[0m nb_data \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m  \u001B[38;5;66;03m# Increment the count of fetched data. \u001B[39;00m\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
     }
    ],
-   "execution_count": null
+   "execution_count": 22
   },
   {
    "cell_type": "code",
