--- a/src/debugging_tool/NHL_debugging_tool.ipynb
+++ b/src/debugging_tool/NHL_debugging_tool.ipynb
@@ -7,12 +7,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO FRANCK : DELETE THIS FILE WHEN DONE\n",
+    "\n",
     "import SeasonData as sdata\n",
     "import pandas as pd\n",
     "import ipywidgets\n",
     "import pprint\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg "
+    "import matplotlib.image as mpimg"
    ]
   },
   {
@@ -23,46 +25,51 @@
    "outputs": [],
    "source": [
     "nhl_data_provider = sdata.NHLData()\n",
-    "season_list = [2021,2022]\n",
+    "season_list = [2021, 2022]\n",
     "\n",
     "# on charge les données au préalable\n",
     "for season in season_list:\n",
-    "    nhl_data_provider.fetch_regular_season(year = str(season))\n",
-    "    nhl_data_provider.fetch_playoffs(year = str(season))\n",
-    "    \n",
+    "    nhl_data_provider.fetch_regular_season(year=str(season))\n",
+    "    nhl_data_provider.fetch_playoffs(year=str(season))\n",
+    "\n",
+    "\n",
     "def plot_nhl_data(game_type, season=2022):\n",
     "    season = str(season)\n",
-    "    \n",
-    "    if(game_type == 'regular'):\n",
+    "\n",
+    "    if (game_type == 'regular'):\n",
     "        games_data = nhl_data_provider.regular_season[season]\n",
     "    else:\n",
     "        games_data = nhl_data_provider.playoffs[season]\n",
-    "    \n",
-    "    game_count = len(games_data)\n",
-    "    ipywidgets.interact(plot_game, game_number=(1, game_count,1), games_data=ipywidgets.fixed(games_data))\n",
-    "    \n",
     "\n",
-    "def plot_game(game_number, games_data):    \n",
-    "    game_data = games_data[game_number-1]\n",
-    "    \n",
+    "    game_count = len(games_data)\n",
+    "    ipywidgets.interact(plot_game, game_number=(1, game_count, 1), games_data=ipywidgets.fixed(games_data))\n",
+    "\n",
+    "\n",
+    "def plot_game(game_number, games_data):\n",
+    "    game_data = games_data[game_number - 1]\n",
+    "\n",
     "    print(game_data['startTimeUTC'])\n",
-    "    print(f\"Game ID: {game_number}; {game_data['homeTeam']['abbrev']} (home) vs {game_data['awayTeam']['abbrev']} (away)\")\n",
-    "    \n",
+    "    print(\n",
+    "        f\"Game ID: {game_number}; {game_data['homeTeam']['abbrev']} (home) vs {game_data['awayTeam']['abbrev']} (away)\")\n",
+    "\n",
     "    col1 = ['', 'Teams', 'Goals', 'SoG']\n",
-    "    col2 = [\"Home\",f\"{game_data['homeTeam']['abbrev']}\", f\"{game_data['homeTeam']['score']}\", f\"{game_data['homeTeam']['sog']}\"]\n",
-    "    col3 = [\"Away\",f\"{game_data['awayTeam']['abbrev']}\", f\"{game_data['awayTeam']['score']}\", f\"{game_data['awayTeam']['sog']}\"]\n",
+    "    col2 = [\"Home\", f\"{game_data['homeTeam']['abbrev']}\", f\"{game_data['homeTeam']['score']}\",\n",
+    "            f\"{game_data['homeTeam']['sog']}\"]\n",
+    "    col3 = [\"Away\", f\"{game_data['awayTeam']['abbrev']}\", f\"{game_data['awayTeam']['score']}\",\n",
+    "            f\"{game_data['awayTeam']['sog']}\"]\n",
     "    print('')\n",
     "    for c1, c2, c3 in zip(col1, col2, col3):\n",
     "        print(f'{c1:<18} {c2:<18} {c3:<18}')\n",
-    "    \n",
+    "\n",
     "    event_count = len(game_data['plays'])\n",
-    "    \n",
-    "    ipywidgets.interact(plot_game_event, event_number=(1, event_count,1), game_data=ipywidgets.fixed(game_data))\n",
+    "\n",
+    "    ipywidgets.interact(plot_game_event, event_number=(1, event_count, 1), game_data=ipywidgets.fixed(game_data))\n",
+    "\n",
     "\n",
     "def plot_game_event(game_data, event_number):\n",
-    "    event_data = game_data['plays'][event_number-1]\n",
+    "    event_data = game_data['plays'][event_number - 1]\n",
     "    print(\"infos de l'evenement\")\n",
-    "    \n",
+    "\n",
     "    image_path = 'patinoire.png'\n",
     "    img = mpimg.imread(image_path)\n",
     "    img_height, img_width = img.shape[0], img.shape[1]\n",
@@ -79,27 +86,27 @@
     "    # Masquer les axes du haut et de droite\n",
     "    ax.spines['right'].set_color('none')\n",
     "    ax.spines['top'].set_color('none')\n",
-    "    \n",
-    "    if('details' in event_data and 'xCoord' in event_data['details'] and 'yCoord' in event_data['details']):\n",
+    "\n",
+    "    if ('details' in event_data and 'xCoord' in event_data['details'] and 'yCoord' in event_data['details']):\n",
     "        ax.scatter(event_data['details']['xCoord'], event_data['details']['yCoord'], color=\"blue\", s=100, zorder=5)\n",
-    "    \n",
+    "\n",
     "    y_min, y_max = plt.ylim()\n",
-    "    \n",
+    "\n",
     "    if event_data['homeTeamDefendingSide'] == 'right':\n",
     "        home_team_position_x = 40\n",
     "        away_team_position_x = -60\n",
     "    else:\n",
     "        home_team_position_x = -60\n",
     "        away_team_position_x = 40\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    plt.text(home_team_position_x, y_max, game_data['homeTeam']['abbrev'], fontsize=12, verticalalignment='bottom')\n",
     "    plt.text(away_team_position_x, y_max, game_data['awayTeam']['abbrev'], fontsize=12, verticalalignment='bottom')\n",
     "\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
     "    # on affiche les données brute de l'évenement\n",
     "    pprint.pprint(event_data)\n",
+    "\n",
     "\n",
     "ipywidgets.interact(plot_nhl_data, game_type=['regular', 'playoff'], season=season_list)"
    ]
