addition of data fetch section to the blog

--- a/blogpost-template-main/_posts/2024-09-18-ift6758-milestone-1.md
+++ b/blogpost-template-main/_posts/2024-09-18-ift6758-milestone-1.md
@@ -4,7 +4,200 @@ title: Milestone 1
 toc: true
 ---
 
-## Question 1
+## Question 1 : Acquisition de données 
+
+La classe `NHLData` encapsule toutes les fonctionnalités nécessaires pour récupérer et stocker les données de jeu de la LNH.  Elle a la structure suivante:
+
+```python
+import json
+from os import makedirs
+from os.path import join, isfile, exists
+
+import requests
+
+
+class NHLData:
+
+    # Constructor
+    def __init__(self):
+        self.playoffs = {}
+        self.regular_season = {}
+
+    def fetch_regular_season(self, year: str):
+        pass
+
+    def fetch_playoffs(self, year: str):
+        pass
+
+    def __generate_playoff_id(self, playoff_id: str) -> str:
+        pass
+```
+
+Le constructeur initialise deux dictionnaires — `playoffs` et `regular_season` — qui sont utilisés pour stocker les données pour chaque catégorie respective. Ces dictionnaires contiendront ensuite les données de plusieurs saisons, permettant une récupération et une manipulation faciles des informations récupérées.
+
+### a. Les méthodes `fetch_regular_season` et `fetch_playoffs`
+
+La méthode `fetch_regular_season` récupère les données de tous les matchs d'une saison régulière spécifiée. Elle le fait en effectuant continuellement des requêtes GET vers l'API de la LNH pour chaque match, en incrémentant le numéro de match à chaque requête réussie. Si la requête échoue, nous assumons avoir reçu la totalité des matchs de saison régulière.
+
+Elle est définit comme suit:
+
+```python
+        # Path directory to save files
+        path_directory = f"data/regular_season/{year}"
+
+        # Ensure directory exists to store the JSON files locally
+        if not exists(path_directory):
+            makedirs(path_directory)
+
+        game = "0001"  # Initialize the first game number as a zero-padded string
+        games_list = []  # List to store all game data for the season
+        nb_data = 0  # Number of successful data imports
+
+        # Continuously fetch data until a non-200 response is received
+        while True:
+
+            # Construct the local file path based on season and game number
+            local_file = join(path_directory, f"{year}_{game}.json")
+
+            # API URL to fetch play-by-play data for the given game and season
+            url = f"https://api-web.nhle.com/v1/gamecenter/{year}02{game}/play-by-play"
+
+            # Check if the data file exists locally
+            if not isfile(local_file):
+
+                # Fetch data from the API
+                response = requests.get(url)
+
+                # Check if the API request was successful (status code 200)
+                if response.status_code == 200:
+
+                    # Parse the response JSON data
+                    data = response.json()
+
+                    # Write the fetched data to the local file in JSON format
+                    with open(local_file, 'w', encoding='utf-8') as file:
+                        json.dump(data, file, ensure_ascii=False, indent=4)  # Save with proper formatting
+                    print(f"Data was successfully imported: {local_file}")
+
+                # If the API request fails (non-200 response), break the loop
+                else:
+                    break
+            else:
+                # Load the game data from the local file
+                with open(local_file, 'r', encoding='utf-8') as file:
+                    data = json.load(file)
+
+            nb_data += 1  # Increment the count of fetched data. 
+            games_list.append(data)  # Append the game data to the games_list
+            game = f"{int(game) + 1:04d}"  # Increment the game number, keeping it zero-padded to 4 digits (e.g., 0002, 0003, etc.)
+
+        # Store the list of game data in the appropriate class attribute for later use
+        self.regular_season[year] = games_list
+        print(f"Data imported: {nb_data}")
+```
+
+La méthode `fetch_playoffs` fonctionne de manière similaire à `fetch_regular_season`, mais est conçue pour récupérer les données des matchs des séries éliminatoires de la LNH. Les matchs des séries éliminatoires sont structurés différemment, donc la méthode prend en compte les différents tours et affrontements.
+
+Elle est définit comme suit:
+
+```python
+    def fetch_playoffs(self, year: str):
+        """
+        Fetch playoffs data for a specific year.
+        :param year: The season year
+        """
+
+        """
+        Fetches play-by-play playoffs game data for a season and stores it locally.
+        The function continues fetching data until the final playoff round (4).
+        The fetched data is saved to local JSON files, and if the file exists locally, it will be loaded from there.
+        The loaded data is added to dictionary self.playoffs, where the key is the year/season of the playoffs. 
+        """
+
+        # Path directory to save files
+        path_directory = f"data/playoffs/{year}"
+
+        # Ensure directory exists to store the JSON files locally
+        if not exists(path_directory):
+            makedirs(path_directory)
+
+        game = "0111"  # Initialize the first playoff game as number as a zero-padded string
+        games_list = []  # List to store all game data for the season
+        nb_data = 0  # Number of successful data imports
+
+        # Goes through all the games, rounds and matchups in the playoffs
+        while int(game[1]) < 5:
+
+            # Construct the local file path based on season and game number
+            local_file = join(path_directory, f"{year}_{game}.json")
+
+            # API URL to fetch play-by-play data for the given game and season
+            url = f"https://api-web.nhle.com/v1/gamecenter/{year}03{game}/play-by-play"
+
+            # Verify if the data file exists locally
+            if not isfile(local_file):
+
+                # Fetch data from the API
+                response = requests.get(url)
+
+                # Check if the API request was successful (status code 200)
+                if response.status_code == 200:
+
+                    # Parse the response JSON data
+                    data = response.json()
+
+                    # Write the fetched data to the local file in JSON format
+                    with open(local_file, 'w', encoding='utf-8') as file:
+                        json.dump(data, file, ensure_ascii=False, indent=4)  # Save with proper formatting
+                        print(f"Data was successfully imported: {local_file}")
+
+                # If the API request failed, update the last 4 digits of the game id
+                else:
+                    game = self.__generate_playoff_id(game)  # Generate a new game_id
+                    continue  # skip to the next loop
+
+            # Load the game data from the local file (either newly fetched or pre-existing)
+            with open(local_file, 'r', encoding='utf-8') as file:
+                data = json.load(file)
+                games_list.append(data)  # Append the game data to the games_list
+                nb_data += 1  # Increment the count of fetched data.
+
+            # Increment the game number, keeping it zero-padded to 4 digits (e.g., 0002, 0003, etc.)
+            game = f"{int(game) + 1:04d}"
+
+        # Store the list of game data in the appropriate class attribute for later use
+        self.playoffs[year] = games_list
+        print(f"Data imported: {nb_data}")
+```
+
+Les deux méthodes sauvegardent les données récupérées dans des fichiers locaux au format JSON dans une structure de répertoire appropriée (`data/regular_season/<année>` ou `data/playoffs/<année>`). Cela permet d'éviter de récupérer les mêmes données à partir de l'API à chaque fois, ce qui rend le programme plus efficace et permet un accès hors ligne aux données. 
+Une fois les fichiers JSON téléchargés, on peut accéder à leur contenu via les dictionnaires `playoffs` et `regular_season` qui sont populés à partir de ces fichiers.
+
+La méthode  `__generate_playoff_id` quant à elle est une méthode utilitaire privée qui génère de nouveaux identifiants de matchs des séries éliminatoires en incrémentant le tour, l'affrontement et le numéro de match, selon les règles des séries éliminatoires de la LNH. Par exemple, lorsque tous les matchs d'un affrontement ont été récupérés, la méthode incrémente le numéro d'affrontement ou le tour, selon le cas.
+
+### b. Exemple d'utilisation de la classe
+
+Essayons de récupérérer les données des match de la saison 2022 en utilisant notre classe.
+
+On doit d'abord télécharger les données en appellant les méthodes `fetch_regular_season` et `fetch_playoffs` comme suit:
+
+```python
+nhl_data_provider = NHLData() 
+nhl_data_provider.fetch_regular_season(2022)
+nhl_data_provider.fetch_playoffs(2022)
+```
+
+Ensuite, on peut accéder aux données téléchargés via les dictionnaires `regular_season` et `playoffs`. Par exemple, pour obtenir les données du premier match de la saison régulière et du premier match de playoffs pour la saison 2022, on utilise le code suivant:
+
+```python
+nhl_data_provider.regular_season[2022][0]
+nhl_data_provider.playoffs[2022][0]
+```
+
+On obtient ceci comme résultat:
+
+![Apercu de l'outil de débogage](/public/data-fetch-example.png)
+
 
 ## Question 2 : Outil de débogage interactif
 
